资源导入（图片，布局，颜色等）

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#ff5000</color>
+    <color name="colorPrimaryDark">#ff5000</color>
+    <color name="colorAccent">#ff7700</color>
+
+    <color name="white">#FFFFFF</color>
+    <color name="text_color_hint">#3d4245</color>
+    <color name="recycler_bg">#000000</color>
+    <color name="bg_page">#ebebeb</color>
+
+    <color name="text_goods_name">#3e4346</color>
+    <color name="text_goods_describe">#676767</color>
+    <color name="btn_tell">#ff9402</color>
+    <color name="background">#eeeeee</color>
+    <color name="text_hint">#999999</color>
 </resources>
